<resources>
    <string name="app_name">Blog App</string>
    <string name="loading_percent">Loading.. %1$s</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="server_error">Server error</string>
    <string name="error">Error</string>
    <string name="loading">Loading</string>
    <string name="hour_ago_placeholder">%1$d hour ago</string>
    <string name="hours_ago_placeholder">%1$d hours ago</string>
    <string name="minute_ago_placeholder">%1$d minute ago</string>
    <string name="minutes_ago_placeholder">%1$d minutes ago</string>
    <string name="just_now">Just Now</string>
    <string name="yesterday_placeholder">Yesterday at %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="options">Options</string>
    <string name="downloading_image">Downloading Image</string>
    <string name="picture_downloaded">Image downloaded</string>
    <string name="share_photo">Share Photo</string>
    <string name="open_webpage">Open Webpage</string>
    <string name="not_connected">Connection Timeout</string>
    <string name="article_details">Article Details</string>
    <string name="more_comments_count_placeholder">More Comments (%1$d)</string>
    <string name="one_more_comment">One More Comment</string>
    <string name="gallery_details">Gallery Details</string>
    <string name="information">Information</string>
    <string name="comments">Comments</string>
    <string name="comment_placeholder">\"%1$s\"</string>
    <string name="posts">Posts</string>
    <string name="activity_timeline">Activity Timeline</string>
    <string name="about_text">BlogApp Template is an effort from Appdrvn to provide a mobile application template. Aiming to assist new startup to speed up their development of mobile application. Below are some parties we would like highlight, some of them are libraries that are being used in template, some of them are the author of icon resources in this template.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="join_us">Join Us</string>
    <string name="terms_n_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="greetings">Greetings</string>
    <string name="forgot_password_prompt">Please enter your registered email address to recover password</string>
    <string name="submit">Submit</string>
    <string name="instruction_to_reset_your_password_has_been_sent_to_your_email">Instruction to reset your password has been sent to your email address</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="profile_updated">Profile updated</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_has_been_changed">Password has been changed</string>
    <string name="new_password_instruction">**Your password must be atleast 8 characters long</string>
    <string name="enter_comment_here">Enter comment here</string>

</resources>
