<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/dialog_size"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar_dialog"/>

    <TextView
        android:layout_margin="@dimen/activity_margin"
        android:minWidth="@dimen/button_width"
        android:maxWidth="@dimen/button_width"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text"
        android:text="@string/forgot_password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/text_light_grey"
        android:padding="@dimen/half_activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:background="@color/transparent"
        android:minWidth="@dimen/button_width"
        android:maxWidth="@dimen/button_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        style="@style/div"/>

    <TextView
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        style="@style/button.color_primary" />

</LinearLayout>