<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_size"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar_dialog" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:maxWidth="@dimen/button_width"
        android:minWidth="@dimen/button_width"
        android:text="@string/current_password"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text" />

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditTextHint"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxWidth="@dimen/button_width"
            android:minWidth="@dimen/button_width"
            android:padding="@dimen/half_activity_margin"
            android:textColor="@color/black"
            android:textColorHint="@color/text_light_grey" />
    </android.support.design.widget.TextInputLayout>

    <View
        style="@style/div"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin" />

    <TextView
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="@dimen/double_activity_margin"
        android:maxWidth="@dimen/button_width"
        android:minWidth="@dimen/button_width"
        android:text="@string/new_password_instruction"
        android:textColor="@color/red"
        android:textSize="@dimen/regular_text" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="@dimen/quarter_activity_margin"
        android:maxWidth="@dimen/button_width"
        android:minWidth="@dimen/button_width"
        android:text="@string/new_password"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text" />

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditTextHint"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxWidth="@dimen/button_width"
            android:minWidth="@dimen/button_width"
            android:padding="@dimen/half_activity_margin"
            android:textColor="@color/black"
            android:textColorHint="@color/text_light_grey" />
    </android.support.design.widget.TextInputLayout>

    <View
        style="@style/div"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:maxWidth="@dimen/button_width"
        android:minWidth="@dimen/button_width"
        android:text="@string/repeat_new_password"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text" />

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditTextHint"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:maxWidth="@dimen/button_width"
            android:minWidth="@dimen/button_width"
            android:padding="@dimen/half_activity_margin"
            android:textColor="@color/black"
            android:textColorHint="@color/text_light_grey" />
    </android.support.design.widget.TextInputLayout>

    <View
        style="@style/div"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin" />

    <TextView
        android:id="@+id/submit"
        style="@style/button.color_primary"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/submit" />

</LinearLayout>